Closed Bug 1149990 Opened 10 years ago Closed 10 years ago

Cannot set currentTime/resume transitions that are finished

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: pbro, Assigned: jwatt)

References

Details

Attachments

(1 file)

STR: - Open https://dl.dropboxusercontent.com/u/714210/transition.html - Click on the red <div> - Wait for the width/height transitions to end - Open the web console On click of the <div>, I store both Animation objects (retrieved via el.getAnimations()) on the global scope, in the `animations` variable. So, with the web console opened, you can try to change the currentTime of either the width or height transitions, or play/pause, change the playbackRate, ... nothing seems to work. It looks like once finished, transitions are put in a state where nothing works anymore. Executing animations[0].playState however does return "finished". For info, trying to change the currentTime while the transition is playing does work as expected. Also for info, modifying css animations (not transitions) after they're finished does work too.
Blocks: 985861
Blocks: 1149999
Attached patch possible patchSplinter Review
This works, although I'm not sure we should be calling SetIsFinishedTransition in two different places.
Assignee: nobody → jwatt
Attachment #8586755 - Flags: review?(bbirtles)
Comment on attachment 8586755 [details] [diff] [review] possible patch Perhaps drop the default argument value and just explicitly pass true when needed?
Attachment #8586755 - Flags: review?(bbirtles) → review+
I'd really want this to land sooner rather than later. Is the current r+'d patch ok to go? Or are there other things to do here?
Flags: needinfo?(jwatt)
No longer blocks: 1149999
I will land this soon, but the tree has been closed recently. I'll try again tomorrow.
Flags: needinfo?(jwatt)
And as soon as I finally decide to say that the tree reopens... https://hg.mozilla.org/integration/mozilla-inbound/rev/2f011e332b68
Any chance of a test for this?
Flags: needinfo?(jwatt)
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
(In reply to Brian Birtles (:birtles) from comment #6) > Any chance of a test for this? Bug 1157053.
Flags: needinfo?(jwatt)
Depends on: 1157053
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: