Bug 1149990 - Support replaying of finished CSS transitions by supporting setting of currentTime/startTime. r=birtles